fixed minor js isssue

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="form-group row align-items-start">
-                            <label for="plat" class="col-12 col-md-2 col-form-label ">Plat </label>
+                            <label for="image" class="col-12 col-md-2 col-form-label ">Image </label>
                             <div class="col-12 col-md-7">
                                 <div class="custom-file">
                                     <input type="file" class="custom-file-input" accept="image/*" id="image">
